# redirector

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.rs  codecov.yml  config.example.yaml  config.yaml.example  docker-compose.yaml
.githooks/: commit-msg  pre-commit
.github/: FUNDING.yml
.github/workflows/: ci.yaml  ci.yml  coverage.yaml  docker.yml
docs/: CLICK_ANALYTICS.md  EVENT_ANALYTICS.md  README.de.md  README.es.md  README.fi.md  README.fr.md  README.he.md  README.hi.md  README.id.md  README.it.md  README.ja.md  README.ko.md  README.nl.md  README.pl.md  README.pt.md  README.ru.md  README.sv.md  README.template.md  README.tr.md  README.uk.md  README.vi.md  README.zh.md  ROADMAP.md  TODO_EVENTS.md
docs/plans/: 2026-02-03-admin-dashboard-design.md  2026-02-03-redirector-design.md
migrations/analytics/: 20260204000001_create_enums.sql  20260204000002_create_user_agents.sql  20260204000003_create_referers.sql  20260204000004_create_referer_domains.sql  20260204000005_create_geo_locations.sql  20260204000006_create_redirect_events.sql  20260205000001_alter_ip_to_inet.sql  20260205000002_create_urls.sql
scripts/: hash_password.sh
src/: config.rs  config_test.rs  error.rs  error_test.rs  lib.rs  lib_test.rs  main.rs  metrics.rs  metrics_test.rs
src/admin/: auth.rs  auth_test.rs  handlers_test.rs  mod.rs  pages_test.rs  simulation.rs  simulation_test.rs  sse.rs  sse_test.rs  state.rs  state_test.rs
src/admin/components/: mod.rs
src/admin/pages/: dashboard.rs  login.rs  mod.rs
src/db/: main_storage.rs  mod.rs
src/events/: consumer.rs  consumer_test.rs  dispatcher.rs  dispatcher_test.rs  mod.rs  mod_test.rs  publisher.rs  publisher_test.rs  queue_rabbitmq.rs  queue_rabbitmq_test.rs  snowflake.rs  snowflake_test.rs  storage_postgres.rs  storage_postgres_test.rs  traits.rs
src/handlers/: health.rs  health_test.rs  index.rs  index_test.rs  metrics.rs  metrics_test.rs  mod.rs  redirect.rs  redirect_test.rs
src/middleware/: basic_auth.rs  basic_auth_test.rs  mod.rs  rate_limit.rs  rate_limit_test.rs  version_header.rs  version_header_test.rs
src/services/: cache.rs  cache_test.rs  hashid.rs  hashid_test.rs  mod.rs  traits.rs  url_resolver.rs  url_resolver_test.rs
templates/: dashboard.html  index.html  interstitial.html  login.html  not_found.html
tests/: cache_integration.rs  events_integration.rs  redirect_integration.rs  storage_integration.rs
tests/loadtest/: README.md  loadtest.lua  sample_hashids_100.txt  sample_hashids_1000.txt  sample_hashids_10000.txt
tools/: gen_hashids.rs  gen_simulation_data.rs  hash_password.rs  load_test.rs
