[package]
name = "redirector"
version = "0.1.0"
edition = "2021"
authors = ["Anton Brilliantov"]
description = "Safe redirect service with hashid decoding and caching"
license = "MIT"
repository = "https://github.com/brilliant-almazov/redirector"
readme = "README.md"
keywords = ["redirect", "hashid", "cache", "proxy"]
categories = ["web-programming"]

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# Templates
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"

# Configuration
config = { version = "0.14", features = ["yaml"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres"] }
deadpool-redis = "0.18"
redis = { version = "0.27", features = ["tokio-comp"] }

# Hashids
harsh = "0.2"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Rate limiting & Circuit breaker
governor = "0.8"
failsafe = "1"

# Tracing & Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Misc
dotenvy = "0.15"
once_cell = "1"
subtle = "2"
base64 = "0.22"
async-trait = "0.1"

# Admin dashboard
leptos = { version = "0.7", features = ["ssr"] }
leptos_axum = "0.7"
argon2 = "0.5"
sysinfo = "0.32"
rand = "0.8"
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4"] }
axum-extra = { version = "0.10", features = ["cookie"] }
time = "0.3"
futures = "0.3"
serde_json = "1"

[dev-dependencies]
# Testing
tokio-test = "0.4"
wiremock = "0.5"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres", "redis"] }
reqwest = { version = "0.12", features = ["json"] }
pretty_assertions = "1"
rstest = "0.23"

[[bin]]
name = "gen_hashids"
path = "tools/gen_hashids.rs"

[[bin]]
name = "hash_password"
path = "tools/hash_password.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
