[package]
name = "redirector"
version = "0.2.4"
edition = "2021"
authors = ["Anton Brilliantov"]
description = "Safe redirect service with hashid decoding and caching"
license = "MIT"
repository = "https://github.com/brilliant-almazov/redirector"
readme = "README.md"
keywords = ["redirect", "hashid", "cache", "proxy"]
categories = ["web-programming"]

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "normalize-path", "fs"] }
minify-html = "0.18"

# Templates
askama = "0.15"

# Configuration
config = { version = "0.14", features = ["yaml"] }
serde = { version = "1", features = ["derive"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres"] }
deadpool-redis = "0.22"
redis = { version = "1", features = ["tokio-comp"] }

# Hashids
harsh = "0.2"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.18"

# Rate limiting & Circuit breaker
governor = "0.10"
failsafe = "1"

# Tracing & Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Misc
dotenvy = "0.15"
once_cell = "1"
subtle = "2"
base64 = "0.22"
async-trait = "0.1"

# Admin dashboard
argon2 = "0.5"
sysinfo = "0.38"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
axum-extra = { version = "0.12", features = ["cookie"] }
time = "0.3"
futures = "0.3"
serde_json = "1"

[dev-dependencies]
# Testing
testcontainers = "0.26"
testcontainers-modules = { version = "0.14", features = ["postgres", "redis"] }

[[bin]]
name = "gen_hashids"
path = "tools/gen_hashids.rs"

[[bin]]
name = "hash_password"
path = "tools/hash_password.rs"

[[bin]]
name = "gen_simulation_data"
path = "tools/gen_simulation_data.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
